Opened 4 years ago

Closed 4 years ago

#16260 closed bug (fixed)

[HaikuDepot] Featured list doubling

Reported by: diver Owned by: apl-haiku
Priority: normal Milestone: R1/beta3
Component: Applications/HaikuDepot Version: R1/beta2
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

This is hrev54325.

It was reported to me on Telegram. Not sure how to reproduce it so far.

Attachments (3)

hd1.jpg (49.9 KB ) - added by diver 4 years ago.
hd2.jpg (54.6 KB ) - added by diver 4 years ago.
hd3.jpg (70.7 KB ) - added by diver 4 years ago.

Download all attachments as: .zip

Change History (5)

by diver, 4 years ago

Attachment: hd1.jpg added

by diver, 4 years ago

Attachment: hd2.jpg added

by diver, 4 years ago

Attachment: hd3.jpg added

comment:1 by diver, 4 years ago

Description: modified (diff)

comment:2 by apl-haiku, 4 years ago

Milestone: UnscheduledR1/beta3
Resolution: fixed
Status: newclosed

Diver; can you please re-open this ticket if you see further problems with this redraw issue.

Note: See TracTickets for help on using tickets.